[package]
name = "iso_14977"
version = "0.1.0"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
description = "Hopefully ISO 14977 compliant EBNF parser in Rust"
license = "MIT"
repository = "https://github.com/hbina/iso_14977"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
